force-app/main/default/objects/Student__c/fields/College_Name__c.field-meta.xml
<CustomField>
    <fullName>College_Name__c</fullName>
    <label>College Name</label>
    <referenceTo>College__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>