force-app/main/default/objects/Student__c/fields/Ref_By_Stundent__c.field-meta.xml
<CustomField>
    <fullName>Ref_By_Stundent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. By Stundent</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>